archivista-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archivista
  namespace: archivista
  labels:
    app: archivista
spec:
  selector:
    matchLabels:
      app: archivista
  template:
    metadata:
      labels:
        app: archivista
    spec:
      containers:
      - name: archivista
        image: ghcr.io/adsk-pset-de-hackathon/archivista/archivista:latest
        volumeMounts:
        - name: spiffe-workload-api
          mountPath: /run/spire/sockets
          readOnly: true
        ports:
          - containerPort: 8082
        livenessProbe:
          tcpSocket:
            port: 8082
          initialDelaySeconds: 15
          periodSeconds: 60
        readinessProbe:
          tcpSocket:
            port: 8082
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: spiffe-workload-api
        csi:
          driver: "csi.spiffe.io"
          readOnly: true
