archivista-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archivista
  namespace: archivista
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: archivista
                port:
                  number: 8082
